--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
         <input class="form-control ml-4 mr-2" type="search" placeholder="Nome personagem">
            <button class="btn btn-dark" type="Submit">Ok</button>
     </form>
+
+    <section id="personagem">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="/img/caitlyn.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Cras justo odio</li>
+              <li class="list-group-item">Dapibus ac facilisis in</li>
+              <li class="list-group-item">Vestibulum at eros</li>
+            </ul>
+            <div class="card-body">
+              
+            </div>
+          </div>
+    </section>
  
   </body>
 </html>
